content/_generated-doc/2.16/config/quarkus-vertx-core.adoc

:summaryTableId: quarkus-vertx-core
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-core_configuration]]link:#quarkus-vertx-core_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-core_quarkus.vertx.caching]]`link:#quarkus-vertx-core_quarkus.vertx.caching[quarkus.vertx.caching]`

[.description]
--
Enables or disables the Vert.x cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CACHING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CACHING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-core_quarkus.vertx.classpath-resolving]]`link:#quarkus-vertx-core_quarkus.vertx.classpath-resolving[quarkus.vertx.classpath-resolving]`

[.description]
--
Enables or disabled the Vert.x classpath resource resolver.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLASSPATH_RESOLVING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLASSPATH_RESOLVING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-core_quarkus.vertx.event-loops-pool-size]]`link:#quarkus-vertx-core_quarkus.vertx.event-loops-pool-size[quarkus.vertx.event-loops-pool-size]`

[.description]
--
The number of event loops. By default, it matches the number of CPUs detected on the system.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENT_LOOPS_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENT_LOOPS_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.max-event-loop-execute-time]]`link:#quarkus-vertx-core_quarkus.vertx.max-event-loop-execute-time[quarkus.vertx.max-event-loop-execute-time]`

[.description]
--
The maximum amount of time the event loop can be blocked.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_MAX_EVENT_LOOP_EXECUTE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_MAX_EVENT_LOOP_EXECUTE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`2S`


a| [[quarkus-vertx-core_quarkus.vertx.warning-exception-time]]`link:#quarkus-vertx-core_quarkus.vertx.warning-exception-time[quarkus.vertx.warning-exception-time]`

[.description]
--
The amount of time before a warning is displayed if the event loop is blocked.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_WARNING_EXCEPTION_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_WARNING_EXCEPTION_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`2S`


a| [[quarkus-vertx-core_quarkus.vertx.worker-pool-size]]`link:#quarkus-vertx-core_quarkus.vertx.worker-pool-size[quarkus.vertx.worker-pool-size]`

[.description]
--
The size of the worker thread pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_WORKER_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_WORKER_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-vertx-core_quarkus.vertx.max-worker-execute-time]]`link:#quarkus-vertx-core_quarkus.vertx.max-worker-execute-time[quarkus.vertx.max-worker-execute-time]`

[.description]
--
The maximum amount of time the worker thread can be blocked.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_MAX_WORKER_EXECUTE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_MAX_WORKER_EXECUTE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-vertx-core_quarkus.vertx.internal-blocking-pool-size]]`link:#quarkus-vertx-core_quarkus.vertx.internal-blocking-pool-size[quarkus.vertx.internal-blocking-pool-size]`

[.description]
--
The size of the internal thread pool (used for the file system).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_INTERNAL_BLOCKING_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_INTERNAL_BLOCKING_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-vertx-core_quarkus.vertx.queue-size]]`link:#quarkus-vertx-core_quarkus.vertx.queue-size[quarkus.vertx.queue-size]`

[.description]
--
The queue size. For most applications this should be unbounded

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.growth-resistance]]`link:#quarkus-vertx-core_quarkus.vertx.growth-resistance[quarkus.vertx.growth-resistance]`

[.description]
--
The executor growth resistance. A resistance factor applied after the core pool is full; values applied here will cause that fraction of submissions to create new threads when no idle thread is available. A value of `0.0f` implies that threads beyond the core size should be created as aggressively as threads within it; a value of `1.0f` implies that threads beyond the core size should never be created.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_GROWTH_RESISTANCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_GROWTH_RESISTANCE+++`
endif::add-copy-button-to-env-var[]
--|float 
|`0f`


a| [[quarkus-vertx-core_quarkus.vertx.keep-alive-time]]`link:#quarkus-vertx-core_quarkus.vertx.keep-alive-time[quarkus.vertx.keep-alive-time]`

[.description]
--
The amount of time a thread will stay alive with no work.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_KEEP_ALIVE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_KEEP_ALIVE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-vertx-core_quarkus.vertx.prefill]]`link:#quarkus-vertx-core_quarkus.vertx.prefill[quarkus.vertx.prefill]`

[.description]
--
Prefill thread pool when creating a new Executor. When io.vertx.core.spi.ExecutorServiceFactory.createExecutor is called, initialise with the number of defined threads at startup

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_PREFILL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_PREFILL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.use-async-dns]]`link:#quarkus-vertx-core_quarkus.vertx.use-async-dns[quarkus.vertx.use-async-dns]`

[.description]
--
Enables the async DNS resolver.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_USE_ASYNC_DNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_USE_ASYNC_DNS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pem]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pem[quarkus.vertx.eventbus.key-certificate-pem]`

[.description]
--
PEM Key/cert config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pem.keys]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pem.keys[quarkus.vertx.eventbus.key-certificate-pem.keys]`

[.description]
--
Comma-separated list of the path to the key files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pem.certs]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pem.certs[quarkus.vertx.eventbus.key-certificate-pem.certs]`

[.description]
--
Comma-separated list of the path to the certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-jks]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-jks[quarkus.vertx.eventbus.key-certificate-jks]`

[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-jks.path]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-jks.path[quarkus.vertx.eventbus.key-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-jks.password]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-jks.password[quarkus.vertx.eventbus.key-certificate-jks.password]`

[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pfx]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pfx[quarkus.vertx.eventbus.key-certificate-pfx]`

[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pfx.path]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pfx.path[quarkus.vertx.eventbus.key-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pfx.password]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.key-certificate-pfx.password[quarkus.vertx.eventbus.key-certificate-pfx.password]`

[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pem]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pem[quarkus.vertx.eventbus.trust-certificate-pem]`

[.description]
--
PEM Trust config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pem.certs]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pem.certs[quarkus.vertx.eventbus.trust-certificate-pem.certs]`

[.description]
--
Comma-separated list of the trust certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-jks]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-jks[quarkus.vertx.eventbus.trust-certificate-jks]`

[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-jks.path]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-jks.path[quarkus.vertx.eventbus.trust-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-jks.password]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-jks.password[quarkus.vertx.eventbus.trust-certificate-jks.password]`

[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pfx]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pfx[quarkus.vertx.eventbus.trust-certificate-pfx]`

[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pfx.path]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pfx.path[quarkus.vertx.eventbus.trust-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pfx.password]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-certificate-pfx.password[quarkus.vertx.eventbus.trust-certificate-pfx.password]`

[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.accept-backlog]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.accept-backlog[quarkus.vertx.eventbus.accept-backlog]`

[.description]
--
The accept backlog.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_ACCEPT_BACKLOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_ACCEPT_BACKLOG+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.client-auth]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.client-auth[quarkus.vertx.eventbus.client-auth]`

[.description]
--
The client authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_CLIENT_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_CLIENT_AUTH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`NONE`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.connect-timeout]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.connect-timeout[quarkus.vertx.eventbus.connect-timeout]`

[.description]
--
The connect timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.idle-timeout]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.idle-timeout[quarkus.vertx.eventbus.idle-timeout]`

[.description]
--
The idle timeout in milliseconds.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.receive-buffer-size]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.receive-buffer-size[quarkus.vertx.eventbus.receive-buffer-size]`

[.description]
--
The receive buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_RECEIVE_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_RECEIVE_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.reconnect-attempts]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.reconnect-attempts[quarkus.vertx.eventbus.reconnect-attempts]`

[.description]
--
The number of reconnection attempts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.reconnect-interval]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.reconnect-interval[quarkus.vertx.eventbus.reconnect-interval]`

[.description]
--
The reconnection interval in milliseconds.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.reuse-address]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.reuse-address[quarkus.vertx.eventbus.reuse-address]`

[.description]
--
Whether to reuse the address.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_REUSE_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_REUSE_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.reuse-port]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.reuse-port[quarkus.vertx.eventbus.reuse-port]`

[.description]
--
Whether to reuse the port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_REUSE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_REUSE_PORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.send-buffer-size]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.send-buffer-size[quarkus.vertx.eventbus.send-buffer-size]`

[.description]
--
The send buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_SEND_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_SEND_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.solinger]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.solinger[quarkus.vertx.eventbus.soLinger]`

[.description]
--
The so linger.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_SOLINGER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_SOLINGER+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.ssl]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.ssl[quarkus.vertx.eventbus.ssl]`

[.description]
--
Enables or Disabled SSL.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_SSL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_SSL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.tcp-keep-alive]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.tcp-keep-alive[quarkus.vertx.eventbus.tcp-keep-alive]`

[.description]
--
Whether to keep the TCP connection opened (keep-alive).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TCP_KEEP_ALIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TCP_KEEP_ALIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.tcp-no-delay]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.tcp-no-delay[quarkus.vertx.eventbus.tcp-no-delay]`

[.description]
--
Configure the TCP no delay.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TCP_NO_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TCP_NO_DELAY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.traffic-class]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.traffic-class[quarkus.vertx.eventbus.traffic-class]`

[.description]
--
Configure the traffic class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRAFFIC_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRAFFIC_CLASS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.eventbus.trust-all]]`link:#quarkus-vertx-core_quarkus.vertx.eventbus.trust-all[quarkus.vertx.eventbus.trust-all]`

[.description]
--
Enables or disables the trust all parameter.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.cluster.host]]`link:#quarkus-vertx-core_quarkus.vertx.cluster.host[quarkus.vertx.cluster.host]`

[.description]
--
The host name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|`localhost`


a| [[quarkus-vertx-core_quarkus.vertx.cluster.port]]`link:#quarkus-vertx-core_quarkus.vertx.cluster.port[quarkus.vertx.cluster.port]`

[.description]
--
The port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.cluster.public-host]]`link:#quarkus-vertx-core_quarkus.vertx.cluster.public-host[quarkus.vertx.cluster.public-host]`

[.description]
--
The public host name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PUBLIC_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PUBLIC_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core_quarkus.vertx.cluster.public-port]]`link:#quarkus-vertx-core_quarkus.vertx.cluster.public-port[quarkus.vertx.cluster.public-port]`

[.description]
--
The public port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PUBLIC_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PUBLIC_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core_quarkus.vertx.cluster.clustered]]`link:#quarkus-vertx-core_quarkus.vertx.cluster.clustered[quarkus.vertx.cluster.clustered]`

[.description]
--
Enables or disables the clustering.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_CLUSTERED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_CLUSTERED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core_quarkus.vertx.cluster.ping-interval]]`link:#quarkus-vertx-core_quarkus.vertx.cluster.ping-interval[quarkus.vertx.cluster.ping-interval]`

[.description]
--
The ping interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PING_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PING_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`20S`


a| [[quarkus-vertx-core_quarkus.vertx.cluster.ping-reply-interval]]`link:#quarkus-vertx-core_quarkus.vertx.cluster.ping-reply-interval[quarkus.vertx.cluster.ping-reply-interval]`

[.description]
--
The ping reply interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PING_REPLY_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PING_REPLY_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`20S`


a| [[quarkus-vertx-core_quarkus.vertx.resolver.cache-max-time-to-live]]`link:#quarkus-vertx-core_quarkus.vertx.resolver.cache-max-time-to-live[quarkus.vertx.resolver.cache-max-time-to-live]`

[.description]
--
The maximum amount of time in seconds that a successfully resolved address will be cached. 
If not set explicitly, resolved addresses may be cached forever.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_CACHE_MAX_TIME_TO_LIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_CACHE_MAX_TIME_TO_LIVE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2147483647`


a| [[quarkus-vertx-core_quarkus.vertx.resolver.cache-min-time-to-live]]`link:#quarkus-vertx-core_quarkus.vertx.resolver.cache-min-time-to-live[quarkus.vertx.resolver.cache-min-time-to-live]`

[.description]
--
The minimum amount of time in seconds that a successfully resolved address will be cached.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_CACHE_MIN_TIME_TO_LIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_CACHE_MIN_TIME_TO_LIVE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-vertx-core_quarkus.vertx.resolver.cache-negative-time-to-live]]`link:#quarkus-vertx-core_quarkus.vertx.resolver.cache-negative-time-to-live[quarkus.vertx.resolver.cache-negative-time-to-live]`

[.description]
--
The amount of time in seconds that an unsuccessful attempt to resolve an address will be cached.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_CACHE_NEGATIVE_TIME_TO_LIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_CACHE_NEGATIVE_TIME_TO_LIVE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-vertx-core_quarkus.vertx.resolver.max-queries]]`link:#quarkus-vertx-core_quarkus.vertx.resolver.max-queries[quarkus.vertx.resolver.max-queries]`

[.description]
--
The maximum number of queries to be sent during a resolution.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_MAX_QUERIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_MAX_QUERIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|`4`


a| [[quarkus-vertx-core_quarkus.vertx.resolver.query-timeout]]`link:#quarkus-vertx-core_quarkus.vertx.resolver.query-timeout[quarkus.vertx.resolver.query-timeout]`

[.description]
--
The duration after which a DNS query is considered to be failed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_QUERY_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_QUERY_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5S`


a| [[quarkus-vertx-core_quarkus.vertx.prefer-native-transport]]`link:#quarkus-vertx-core_quarkus.vertx.prefer-native-transport[quarkus.vertx.prefer-native-transport]`

[.description]
--
Enable or disable native transport

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_PREFER_NATIVE_TRANSPORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_PREFER_NATIVE_TRANSPORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
